# djb-chdb-rs

./: .gitignore  Cargo.toml  README.md  build.rs  devenv.nix
examples/: simple_query.rs
scripts/: fetch-libchdb.sh
src/: connection.rs  error.rs  ffi.rs  lib.rs  options.rs  result.rs
tests/: query.rs
